--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,47 @@
+annotated-types==0.7.0
+anyio==4.4.0
 asgiref==3.8.1
 beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
+colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
+distro==1.9.0
 Django==5.1
 django-crispy-forms==2.3
 fonttools==4.53.1
 frozendict==2.4.4
+h11==0.14.0
 html5lib==1.1
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
+jiter==0.5.0
 kiwisolver==1.4.5
 lxml==5.3.0
 matplotlib==3.9.2
 multitasking==0.0.11
 numpy==2.1.0
+openai==1.42.0
 packaging==24.1
 pandas==2.2.2
 peewee==3.17.6
 pillow==10.4.0
 platformdirs==4.2.2
+pydantic==2.8.2
+pydantic_core==2.20.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 requests==2.32.3
 six==1.16.0
+sniffio==1.3.1
 soupsieve==2.6
 sqlparse==0.5.1
+tqdm==4.66.5
+typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 webencodings==0.5.1
