--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.4.0
 asgiref==3.8.1
 beautifulsoup4==4.12.3
 certifi==2024.7.4
+chardet==3.0.4
 charset-normalizer==3.3.2
 colorama==0.4.6
 contourpy==1.2.1
@@ -12,18 +13,22 @@ Django==5.1
 django-crispy-forms==2.3
 fonttools==4.53.1
 frozendict==2.4.4
-h11==0.14.0
+googletrans==4.0.0rc1
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.8.1
 html5lib==1.1
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
 jiter==0.5.0
 kiwisolver==1.4.5
 lxml==5.3.0
 matplotlib==3.9.2
 multitasking==0.0.11
 numpy==2.1.0
-openai==1.42.0
 packaging==24.1
 pandas==2.2.2
 peewee==3.17.6
@@ -36,6 +41,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 requests==2.32.3
+rfc3986==1.5.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
